<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="failure">Something went wrong.Please try again or contact the developer</string>
    <string name="validQuantity">Please enter a valid quantity. Capacity should be positive and less than daily target</string>
    <string name="congrats">Congrats</string>
    <string name="share">Share</string>
    <string name="checkout">https://play.google.com/store/apps/details?id=com.underdog.hydrate</string>
    <string name="checkout_message">Hi, I\'m using Hydrate and I think you\'d like it too.</string>
    <string name="share_message_target_reached">Hi, Hydrate helped me achieve my daily water intake goal of $$</string>
    <string name="select_app">Share via</string>
    <string name="select_edit">Select to edit</string>
    <string name="hello">Hello </string>
    <string name="hello_user">Hello User,</string>
    <string name="add_water">+</string>
    <string name="sub_water">-</string>
    <string name="water_status">0</string>
    <string name="water_quantity_status">0.0</string>
    <string name="water_glasses">cups</string>
    <string name="water_units">litres</string>
    <string name="to_sd">To SD Card</string>
    <string name="to_gdrive">To Google Drive</string>
    <string name="from_sd">From SD Card</string>
    <string name="from_gdrive">From Google Drive</string>
    <string name="to_sd_message">Back up to SD Card/Hydrate/</string>
    <string name="from_sd_message">Restore from SD Card/Hydrate/</string>
    <string name="to_gdrive_message">Back up to Google Drive</string>
    <string name="from_gdrive_message">Restore from Google Drive</string>
    <string name="clear_db">Reset Database</string>
    <string name="clear_db_summary">Remove all drink events</string>
    <string name="clear_db_warning">Remove all drink events?</string>
    <string name="restore_warning">Overwrite existing database?</string>
    <string name="clear_db_success">All drink events have been erased</string>
    <string name="auto_backup_title">Auto backup</string>
    <string name="auto_backup_summary_on">Enabled - auto backup to SD card</string>
    <string name="auto_backup_summary_off">Disabled - auto backup to SD card</string>
    <string name="settings_file_not_present">No compatible settings backup to restore from</string>
    <string name="db_file_not_present">No compatible database backup to restore from</string>
    <string name="backup_complete">Backup complete</string>
    <string name="restore_complete">Restore complete</string>
    <string name="settings_backed_upto">Settings backed up to - </string>
    <string name="db_backed_upto">DB backed up to - </string>
    <string name="connect_gdrive">Connecting to Drive </string>
    <string name="problem_connect_gdrive">Problem connecting to Drive </string>
    <string name="mins">mins</string>
    <string name="reminders_status">Reminders</string>
    <string name="reminder_start_time">Reminder Start Time</string>
    <string name="reminder_end_time">Reminder End Time</string>
    <string name="reminder_interval">Reminder Interval</string>
    <string name="reminder_snooze_interval">Reminder Snooze Interval</string>
    <string name="reminders_enabled">Reminders Enabled</string>
    <string name="reminders_disabled">Reminders Disabled</string>
    <string name="glass_quantity">Default Cup Quantity</string>
    <string name="user_name">Username</string>
    <string name="user_name_default">User</string>
    <string name="backup">Backup/Restore</string>
    <string name="metric">Unit of Measurement</string>
    <string name="default_glass_ml">250</string>
    <string name="default_glass_us_oz">8</string>
    <string name="glass_summary_ml">250 ml</string>
    <string name="glass_summary_us_oz">8 oz</string>
    <string name="targetQuantityTitleOz">Daily Goal (US oz)</string>
    <string name="targetQuantityTitleMl">Daily Goal (Liters)</string>
    <string name="defaultTarget">2.5</string>
    <string name="defaultTargetOz">85</string>
    <string name="customize_cups_title">Customize Cups</string>
    <string name="customize_cups_summary">Edit cup capacities</string>
    <string name="about">About &amp; Help</string>
    <string name="version">Hydrate Version</string>
    <string name="rate_us">Rate Hydrate</string>
    <string name="give_5">please give 5 stars</string>
    <string name="share_hydrate">Share Hydrate</string>
    <string name="share_hydrate_message">Share hydrate with your friends</string>
    <string name="communicate">Communicate</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_message">feature request/suggestions on Hydrate via email</string>
    <string name="bugreport">Bug report</string>
    <string name="bugreport_message">Kindly include steps to reproduce issue</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Sai Chandra Sekhar (sai.cs.d)</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="lunch_dinner">Lunch and Dinner</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="mute_reminders">Mute reminders</string>
    <string name="mute_lunch_dinner">Don\'t remind within 30mins before/after a meal</string>
    <string name="auto_adjust_interval">Adjusted Reminder Interval</string>
    <string name="auto_adjust_target">Adjusted Target</string>
    <string name="notification_sound">Notification Tone</string>
    <string name="default_notification_sound">content://settings/system/notification_sound</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string-array name="metric_entries">
        <item name="1">Milliliter</item>
        <item name="2">US Fluid ounces</item>
    </string-array>
    <string name="edit">Edit</string>
    <string name="quantity">Quantity:</string>
    <string name="time">Time:</string>
    <string name="capacity">Capacity:</string>
    <string name="lastWeek">Last 7 days</string>
    <string name="last3">Last 3 days</string>
    <string name="lastFifteen">Last 15 days</string>
    <string name="lastMonth">Last 1 month</string>
    <string name="last60">Last 2 months</string>
    <string name="last90">Last 3 months</string>
    <string name="last180">Last 6 months</string>
    <string name="last360">Last 1 year</string>
    <string name="averageConsumption">Average Consumption</string>
    <string name="noOfCups">Number of cups</string>
    <string name="quantityConsumed">Quantity consumed</string>
    <string name="targetAchieved">Daily goals achieved(in %)</string>
    <string name="remind_later">Remind later</string>
    <string name="default_notification_message">Hey User, time to have some water</string>
    <string name="target_achieved_message">Congrats User!! You have reached your goal for today</string>
    <string name="target_achieved">Daily goal reached</string>
    <string name="target_achieved_dialog_title">Daily goal reached!</string>
    <string name="target_reached_dialog_message">You have reached your daily goal \n Share it with your friends</string>
    <string name="restore_dialog_title">Restore from previous backup?</string>
    <string name="instant_mute">Silent Mode</string>
    <string name="stop_instant_mute_warning">Turn off Silent Mode?</string>
    <string name="set_duration">Set duration</string>
    <string name="select_days">Select days</string>
    <string name="milliliter">Milliliter</string>
    <string name="us_oz">US oz</string>
    <string name="oz">oz</string>
    <string name="liters">liters</string>
    <string name="l">l</string>
    <string name="ml">ml</string>
    <string-array name="metric_values">
        <item name="1">@string/milliliter</item>
        <item name="2">@string/us_oz</item>
    </string-array>
    <string-array name="glass_options_ml">
        <item name="1">100</item>
        <item name="2">150</item>
        <item name="3">200</item>
        <item name="4">250</item>
        <item name="5">300</item>
    </string-array>
    <string-array name="glass_options_oz">
        <item name="1">6</item>
        <item name="2">8</item>
        <item name="3">12</item>
        <item name="4">16</item>
        <item name="5">20</item>
    </string-array>
    <string-array name="reminder_options">
        <item name="1">30</item>
        <item name="2">45</item>
        <item name="3">60</item>
        <item name="4">75</item>
        <item name="5">90</item>
        <item name="6">120</item>
    </string-array>
    <string-array name="snooze_options">
        <item name="1">10</item>
        <item name="2">15</item>
        <item name="3">30</item>
    </string-array>
    <string name="app_name">Hydrate</string>
    <string name="title_activity_summary">Trends</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_cups">Edit Cup Capacities</string>
    <string name="title_activity_backup">Backup &amp; Restore</string>
    <string name="title_activity_drive">DriveActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dnd">Do Not Disturb</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="setup_tell_us_about_you">To help us serve you better, please fill in the following details. You can change them any time in future from Settings</string>
    <string name="target_not_null">Target can\'t be empty</string>
    <string name="interval_in_settings">You can customize the interval in Settings after initial setup</string>
    <string name="interval_set_toast">Interval set to </string>
    <string name="skip">Skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_storage_rationale">Storage access is required to perform backup of database and settings</string>
    <string name="permission_storage_available">Storage access has been granted</string>
    <string name="permission_storage_not_granted">Storage access has not been granted</string>
    <string name="default_instant_mute">0</string>
    <string name="version_name">2.3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="notification_channel_name">Hydrate Notifications</string>
    <string name="notification_channel_description">Hydrate reminder notifications</string>
</resources>