<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_trends"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_activity_summary" />
        <item
            android:id="@+id/nav_silent_mode"
            android:icon="@drawable/ic_action_bell"
            android:title="@string/instant_mute" />
        <item
            android:id="@+id/nav_edit_cups"
            android:icon="@drawable/ic_action_edit"
            android:title="@string/customize_cups_title" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_activity_backup" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_activity_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
